Add shared contract ABIs, addresses, and update Docker configuration for backend and frontend

--- a/frontend-ui/tsconfig.app.json
+++ b/frontend-ui/tsconfig.app.json
@@ -11,7 +11,8 @@
     /* ✅ Added for shadcn + absolute imports */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@shared/*": ["../shared/*"]
     },
 
     /* Bundler mode */
