--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,7 @@ services:
     ports:
       - "8545:8545"
     volumes:
-      - ./contracts:/app/contracts
-      - ./ignition:/app/ignition
+      - ./shared:/app/shared
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "test -f /tmp/deployment-complete || exit 1"]
@@ -43,7 +42,55 @@ services:
       hardhat:
         condition: service_healthy
 
+  backend:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+    container_name: student-identity-backend
+    environment:
+      NODE_ENV: production
+      DB_HOST: database
+      DB_PORT: 5432
+      DB_NAME: data
+      DB_USER: internal_user
+      DB_PASSWORD: internal_pass
+      PORT: 4000
+      RPC_URL: http://hardhat:8545
+    ports:
+      - "4000:4000"
+    volumes:
+      - ./shared:/workspace/shared:ro
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:4000/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    depends_on:
+      database:
+        condition: service_healthy
+      hardhat:
+        condition: service_healthy
+
+  frontend:
+    build:
+      context: .
+      dockerfile: frontend-ui/Dockerfile
+      args:
+        VITE_RPC_URL: http://localhost:8545
+    container_name: student-identity-frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./shared:/workspace/shared:ro
+    environment:
+      NODE_ENV: production
+      VITE_RPC_URL: http://localhost:8545
+    restart: unless-stopped
+    depends_on:
+      hardhat:
+        condition: service_healthy
+
 volumes:
   postgres_data:
-    name: student-identity-postgres-data
-
