--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./shared:/app/shared
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "test -f /tmp/deployment-complete || exit 1"]
+      test: [ "CMD-SHELL", "test -f /tmp/deployment-complete || exit 1" ]
       interval: 5s
       timeout: 5s
       retries: 60
@@ -20,6 +20,7 @@ services:
 
   database:
     image: "postgis/postgis:16-3.4"
+    platform: linux/amd64
     container_name: student-identity-postgres
     environment:
       POSTGRES_USER: internal_user
@@ -32,7 +33,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U internal_user -d data && psql -U internal_user -d data -c 'SELECT 1 FROM wallet LIMIT 1' > /dev/null 2>&1"]
+      test: [ "CMD-SHELL", "pg_isready -U internal_user -d data && psql -U internal_user -d data -c 'SELECT 1 FROM wallet LIMIT 1' > /dev/null 2>&1" ]
       interval: 2s
       timeout: 3s
       retries: 10
@@ -62,7 +63,7 @@ services:
       - ./shared:/workspace/shared:ro
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:4000/health || exit 1"]
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:4000/health || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
